# cmake-rust

./: .gitignore  CMakeLists.txt
crates/: CMakeLists.txt
crates/bar/: CMakeLists.txt
crates/bar/include/bar/: bar.hpp
crates/bar/src/: lib.rs
crates/foo/: CMakeLists.txt  Cargo.toml
crates/foo/include/foo/: foo.h
tests/: CMakeLists.txt  test-bar.cpp  test-foo.cpp
